style(trip-page): add steps display in his grid with correct overflow gestion

--- a/src/app/modules/features/step/components/steps-list/steps-list.component.scss
+++ b/src/app/modules/features/step/components/steps-list/steps-list.component.scss
@@ -5,15 +5,12 @@
     color: $danger--color;
 }
 
-
-
 h4 {
     margin: 0;
 }
 
 .step-list-wrapper {
-    display: block;
-    max-height: calc(60%);
+    max-height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
 }
