--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -10,7 +10,7 @@
     border: 1px solid #C7C7C7;
     background-color: white;
     padding: 1rem;
-    margin: .5rem;
+    margin: .5rem 0;
 }
 
 .list-card {
@@ -18,7 +18,6 @@
     @include mixins.card-shadow();
     background-color: rgb(230, 230, 230);
     padding: .5rem;
-    margin: .25rem;
     // max-height: 100%;
     // overflow: auto;
 }
